Add medal icons for top 3 players in score table
Introduced logic to display gold, silver, and bronze medal icons next to the names of the top three players in the score table. Updated CSS for medal icon styling. Also updated repository and author information in README.md and package.json.

--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
       "scoring",
       "table"
    ],
-   "author": "Your Name",
+   "author": "AidenTag",
    "license": "MIT",
    "repository": {
       "type": "git",
-      "url": "https://github.com/yourusername/scrabble-score-sheet.git"
+      "url": "https://github.com/AidenTag/scrabble-score.git"
    },
-   "homepage": "https://yourusername.github.io/scrabble-score-sheet"
+   "homepage": "https://aidentag.github.io/scrabble-score"
 }
